--- a/views/user/plans/plan_details.twig
+++ b/views/user/plans/plan_details.twig
@@ -2,7 +2,7 @@
 {% block content %}
     <style>
         /* Set styles for the container holding the Card Element */
-        #uploadForm #card-element {
+        #CheckoutForm #card-element {
             width: 100%;
             padding: 10px;
             border: 1px solid #ccc;
@@ -11,25 +11,25 @@
         }
 
         /* Set styles for the Card Element container */
-        #uploadForm .StripeElement {
+        #CheckoutForm .StripeElement {
             background-color: white !important;
             padding: 10px !important;
             border-radius: 5px !important;
         }
 
         /* Set styles for the Card Element inputs */
-        #uploadForm .StripeElement input {
+        #CheckoutForm .StripeElement input {
             border: none !important;
             outline: none !important;
         }
 
         /* Style the placeholder text */
-        #uploadForm .StripeElement ::placeholder {
+        #CheckoutForm .StripeElement ::placeholder {
             color: #aab7c4 !important;
         }
 
         /* Style the inputs when they are focused */
-        #uploadForm .StripeElement :focus {
+        #CheckoutForm .StripeElement :focus {
             box-shadow: 0 0 5px rgba(81, 203, 238, 1) !important;
         }
 
@@ -42,7 +42,7 @@
         }
 
         /* Ensure the card element fits within the modal */
-        #uploadForm .StripeElement {
+        #CheckoutForm .StripeElement {
             width: 100%;
         }
     </style>
