--- a/views/admin/includes/footer.twig
+++ b/views/admin/includes/footer.twig
@@ -82,6 +82,12 @@
         console.log(languageCode);
         triggerGoogleTranslate(languageCode);
     });
+    window.onload = function() {
+        // Remove skeleton loader
+        document.querySelector('.skeleton-sidebar').style.display = 'none';
+        // Show actual content (replace this with the ID or class of your real sidebar)
+        document.querySelector('.real-sidebar').style.display = 'block';
+    };
 </script>
 
 <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
