--- a/views/admin/plans/add_plan.twig
+++ b/views/admin/plans/add_plan.twig
@@ -50,6 +50,14 @@
         color: #000; /* Text color for unselected button */
         font-size: 16px; /* Adjust font size as needed */
     }
+    .btn-check:checked+.btn.btn-outline.btn-outline-dashed.btn-outline-default .svg-icon, .btn-check:checked+.btn.btn-outline.btn-outline-dashed.btn-outline-default i{
+        color:#00a500 !important;
+
+    }
+    .svg-icon.svg-icon-3hx svg{
+        height: 2.5rem !important;
+        width: 2.5rem !important;
+    }
 </style>
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
     <!--begin::Toolbar-->
@@ -149,17 +157,19 @@
                                                         <div class="row">
                                                             {% for permission in permissions %}
                                                                 <div class="col-xl-3 col-md-4 mt-2">
-                                                                    <input type="checkbox" class="btn-check" name="key_points[]" value="{{ permission.id }}" id="{{ permission.id }}">
+                                                                    <input type="checkbox" class="btn-check permission-checkbox" name="key_points[]" value="{{ permission.id }}" id="{{ permission.id }}">
                                                                     <label class="btn btn-outline btn-outline-dashed btn-outline-default p-7 d-flex align-items-center h-100" for="{{ permission.id }}">
-                                                <span class="d-block fw-bold text-start">
-                <span class="text-dark fw-bolder d-block fs-3">{{ permission.title }}</span>
-            </span>
+        <span class="svg-icon svg-icon-3hx svg-icon-primary" id="svg-{{ permission.id }}">
+            <!-- Default SVG -->
+            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+            </svg>
+        </span>
+                                                                        <span class="d-block fw-bold text-start">
+            <span class="text-dark fw-bolder d-block fs-3">{{ permission.title }}</span>
+        </span>
                                                                     </label>
-{#                                                                    <div class="radioButton" style="margin-right: 10px">#}
-{#                                                                        <input class=" m4 required-input" type="checkbox" name="key_points[]" id="{{ permission.id }}"#}
-{#                                                                               value="{{ permission.id }}">#}
-{#                                                                        <label  for="{{ permission.id }}"><button type="button" class="btn btn-light-primary">{{ permission.title }}</button></label>#}
-{#                                                                    </div>#}
                                                                 </div>
                                                             {% endfor %}
                                                         </div>
@@ -188,6 +198,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.27.0/tagify.min.js" integrity="sha512-RZnh1b5EBFnw6IaiqEhT0dQy+dCbeC6ZybZY/CkMlk2OW8Eyj20/t8Js3Ka1Ot/sQIVL20N81p7FRQvloTZgtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
+        document.querySelectorAll('.permission-checkbox').forEach(function(checkbox) {
+            checkbox.addEventListener('change', function() {
+                var svgContainer = document.getElementById('svg-' + this.id);
+
+                if (this.checked) {
+                    svgContainer.innerHTML = `
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                        <path d="M7 11V7a5 5 0 0 1 9.9-1"></path>
+                    </svg>
+                `;
+                } else {
+                    svgContainer.innerHTML = `
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                        <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                    </svg>
+                `;
+                }
+            });
+        });
 
         var input = document.querySelector('input[name=basic]');
         new Tagify(input)
