--- a/views/admin/plans/list.twig
+++ b/views/admin/plans/list.twig
@@ -50,6 +50,14 @@
             color: #000;
             font-size: 16px;
         }
+        .btn-check:checked+.btn.btn-outline.btn-outline-dashed.btn-outline-default .svg-icon, .btn-check:checked+.btn.btn-outline.btn-outline-dashed.btn-outline-default i{
+            color:#00a500 !important;
+
+        }
+        .svg-icon.svg-icon-3hx svg{
+            height: 2.5rem !important;
+            width: 2.5rem !important;
+        }
     </style>
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
     <!--begin::Toolbar-->
@@ -201,13 +209,20 @@
                         <div class="fv-row mb-7 fv-plugins-icon-container">
                             <div class="row">
                                 {% for permission in permissions %}
-                                    <div class="col-xl-4 col-md-6 mt-2">
-                                            <input type="checkbox" class="btn-check" name="key_points[]" value="{{ permission.id }}" id="{{ permission.id }}">
-                                            <label class="btn btn-outline btn-outline-dashed btn-outline-default p-7 d-flex align-items-center h-100" for="{{ permission.id }}">
-                                                <span class="d-block fw-bold text-start">
-                <span class="text-dark fw-bolder d-block fs-3">{{ permission.title }}</span>
-            </span>
-                                            </label>
+                                    <div class="col-xl-6 col-md-6 mt-2">
+                                        <input type="checkbox" class="btn-check permission-checkbox" name="key_points[]" value="{{ permission.id }}" id="{{ permission.id }}">
+                                        <label class="btn btn-outline btn-outline-dashed btn-outline-default p-7 d-flex align-items-center h-100" for="{{ permission.id }}">
+        <span class="svg-icon svg-icon-3hx svg-icon-primary" id="svg-{{ permission.id }}">
+            <!-- Default SVG -->
+            <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+            </svg>
+        </span>
+                                            <span class="d-block fw-bold text-start">
+            <span class="text-dark fw-bolder d-block fs-3">{{ permission.title }}</span>
+        </span>
+                                        </label>
 
 
 {#                                        <div class="radioButton" style="margin-right: 10px">#}
@@ -234,8 +249,27 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tagify/4.27.0/tagify.min.js" integrity="sha512-RZnh1b5EBFnw6IaiqEhT0dQy+dCbeC6ZybZY/CkMlk2OW8Eyj20/t8Js3Ka1Ot/sQIVL20N81p7FRQvloTZgtw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script>
+        document.querySelectorAll('.permission-checkbox').forEach(function(checkbox) {
+            checkbox.addEventListener('change', function() {
+                var svgContainer = document.getElementById('svg-' + this.id);
 
-
+                if (this.checked) {
+                    svgContainer.innerHTML = `
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                        <path d="M7 11V7a5 5 0 0 1 9.9-1"></path>
+                    </svg>
+                `;
+                } else {
+                    svgContainer.innerHTML = `
+                    <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                        <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                        <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                    </svg>
+                `;
+                }
+            });
+        });
         $(document).ready(function () {
             var csrf_token = $("input[name=csrf]").val();
             var table = $('#table').dataTable({
@@ -326,7 +360,18 @@
         $('body').on('click', '.edit', function () {
             var id = $(this).data('id');
             $('#editUploadForm').trigger("reset");
-            $('#key_points_inputs').empty();
+            // $('#key_points_inputs').empty();
+            $('input[name="key_points[]"]').each(function() {
+                var svgContainer = document.getElementById('svg-' + $(this).attr('id'));
+                if (svgContainer) {
+                    svgContainer.innerHTML = `
+                <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                    <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                    <path d="M7 11V7a5 5 0 0 1 10 0v4"></path>
+                </svg>
+            `;
+                }
+            });
             $.ajax({
                 url: "/admin/get_plan",
                 type: "POST",
@@ -349,7 +394,19 @@
                     var keyPoints = dataResult[0].key_points.split(',');
                     keyPoints.forEach(keyPoint => {
                         // Trim any extra spaces and select the corresponding checkbox
-                        $('#editUploadForm input[name="key_points[]"][value="' + keyPoint.trim() + '"]').prop('checked', true);
+                        var checkbox = $('#editUploadForm input[name="key_points[]"][value="' + keyPoint.trim() + '"]');
+                        checkbox.prop('checked', true);
+
+                        // Now update the SVG for the checked checkbox
+                        var svgContainer = document.getElementById('svg-' + checkbox.val());
+                        if (svgContainer) {
+                            svgContainer.innerHTML = `
+                        <svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect>
+                            <path d="M7 11V7a5 5 0 0 1 9.9-1"></path>
+                        </svg>
+                    `;
+                        }
                     });
                 }
             });
