--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -255,24 +255,24 @@
                             </div>
                         </div>
                     {% endif %}
-                {% if 'Funnels' in permissionValues %}
+{#                {% if 'Funnels' in permissionValues %}#}
 
-                        <div class="menu-item">
-                            <a class="menu-link {% if route == '/user/template/all' %}active{% endif %}" href="/user/template/all">
-										<span class="menu-icon">
-											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
-											<span class="svg-icon svg-icon-2">
-										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->
-<span class="svg-icon svg-icon-muted svg-icon-1x">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
-</span>
-                                                <!--end::Svg Icon-->	</span>
-                                            <!--end::Svg Icon-->
-										</span>
-                                <span class="menu-title">Interviews</span>
-                            </a>
-                        </div>
-                {% endif %}
+{#                        <div class="menu-item">#}
+{#                            <a class="menu-link {% if route == '/user/template/all' %}active{% endif %}" href="/user/template/all">#}
+{#										<span class="menu-icon">#}
+{#											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->#}
+{#											<span class="svg-icon svg-icon-2">#}
+{#										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->#}
+{#<span class="svg-icon svg-icon-muted svg-icon-1x">#}
+{#    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>#}
+{#</span>#}
+{#                                                <!--end::Svg Icon-->	</span>#}
+{#                                            <!--end::Svg Icon-->#}
+{#										</span>#}
+{#                                <span class="menu-title">Interviews</span>#}
+{#                            </a>#}
+{#                        </div>#}
+{#                {% endif %}#}
 
                 {% endif %}
                 {# <li class="menu">#}
