--- a/views/user/includes/client_sidebar.twig
+++ b/views/user/includes/client_sidebar.twig
@@ -197,43 +197,43 @@
                     </div>
                     {% endif %}
                     {% endif %}
-                    {% if 'Funnels' in permissionValues %}
-                {% if session_member_id != '' %}
-                    {% if 'Funnels' in firmPermissionValues %}
-                            <div class="menu-item">
-                                <a class="menu-link {% if route == '/client/template/request' %}active{% endif %}" href="/client/template/request">
-										<span class="menu-icon">
-											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
-											<span class="svg-icon svg-icon-2">
-										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->
-<span class="svg-icon svg-icon-muted svg-icon-1x">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
-</span>
-                                                <!--end::Svg Icon--></span>
-                                            <!--end::Svg Icon-->
-										</span>
-                                    <span class="menu-title">Interviews</span>
-                                </a>
-                            </div>
-                    {% endif %}
-                {% else %}
-                    <div class="menu-item">
-                        <a class="menu-link {% if route == '/client/template/request' %}active{% endif %}" href="/client/template/request">
-										<span class="menu-icon">
-											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
-											<span class="svg-icon svg-icon-2">
-										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->
-<span class="svg-icon svg-icon-muted svg-icon-1x">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
-</span>
-                                                <!--end::Svg Icon--></span>
-                                            <!--end::Svg Icon-->
-										</span>
-                            <span class="menu-title">Interviews</span>
-                        </a>
-                    </div>
-                    {% endif %}
-                    {% endif %}
+{#                    {% if 'Funnels' in permissionValues %}#}
+{#                {% if session_member_id != '' %}#}
+{#                    {% if 'Funnels' in firmPermissionValues %}#}
+{#                            <div class="menu-item">#}
+{#                                <a class="menu-link {% if route == '/client/template/request' %}active{% endif %}" href="/client/template/request">#}
+{#										<span class="menu-icon">#}
+{#											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->#}
+{#											<span class="svg-icon svg-icon-2">#}
+{#										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->#}
+{#<span class="svg-icon svg-icon-muted svg-icon-1x">#}
+{#    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>#}
+{#</span>#}
+{#                                                <!--end::Svg Icon--></span>#}
+{#                                            <!--end::Svg Icon-->#}
+{#										</span>#}
+{#                                    <span class="menu-title">Interviews</span>#}
+{#                                </a>#}
+{#                            </div>#}
+{#                    {% endif %}#}
+{#                {% else %}#}
+{#                    <div class="menu-item">#}
+{#                        <a class="menu-link {% if route == '/client/template/request' %}active{% endif %}" href="/client/template/request">#}
+{#										<span class="menu-icon">#}
+{#											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->#}
+{#											<span class="svg-icon svg-icon-2">#}
+{#										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->#}
+{#<span class="svg-icon svg-icon-muted svg-icon-1x">#}
+{#    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>#}
+{#</span>#}
+{#                                                <!--end::Svg Icon--></span>#}
+{#                                            <!--end::Svg Icon-->#}
+{#										</span>#}
+{#                            <span class="menu-title">Interviews</span>#}
+{#                        </a>#}
+{#                    </div>#}
+{#                    {% endif %}#}
+{#                    {% endif %}#}
                 {% endif %}
                 {# <li class="menu">#}
                 {#                <a href="/user/template/all" aria-expanded="false" class="dropdown-toggle">#}
