--- a/views/user/includes/client_sidebar.twig
+++ b/views/user/includes/client_sidebar.twig
@@ -117,6 +117,20 @@
                         </div>
                     {% endif %}
                     {% endif %}
+                    <div class="menu-item">
+                        <a class="menu-link {% if route == '/user/email/inbox' or route == '/user/email/compose' %}active{% endif %}" href="/user/email/inbox">
+										<span class="menu-icon">
+											<!--begin::Svg Icon | path: icons/duotune/general/gen014.svg-->
+											<span class="svg-icon svg-icon-2">
+										<!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen007.svg-->
+<span class="svg-icon svg-icon-muted svg-icon-1x"><svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1">
+        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></span>
+                                                <!--end::Svg Icon-->	</span>
+                                            <!--end::Svg Icon-->
+										</span>
+                            <span class="menu-title">Email</span>
+                        </a>
+                    </div>
                     {% if 'Secured_Document_Hub' in permissionValues %}
                         {% if session_member_id != '' %}
                             {% if 'Secured_Document_Hub' in firmPermissionValues %}
