Names and manual email issue fixed.

--- a/views/user/campaign/list.twig
+++ b/views/user/campaign/list.twig
@@ -28,7 +28,7 @@
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
-                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">List</h1>
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Audience List</h1>
 
                 </div>
 
@@ -78,7 +78,7 @@
                                         <th> Id </th>
                                         <th>Name</th>
                                         <th>Type</th>
-                                        <th >Action</th>
+                                        <th>Action</th>
                                     </tr>
                                     </thead>
                                     <tbody>
