--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -110,7 +110,7 @@
                                             </span>
                                             <!--end::Svg Icon-->
 										</span>
-										<span class="menu-title">Campaign</span>
+										<span class="menu-title">Marketing</span>
 										<span class="menu-arrow"></span>
 									</span>
                         <div class="menu-sub menu-sub-accordion menu-active-bg">
@@ -119,7 +119,7 @@
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
-                                    <span class="menu-title">List</span>
+                                    <span class="menu-title">Audience</span>
                                 </a>
                             </div>
                             <div class="menu-item">
@@ -127,7 +127,7 @@
 												<span class="menu-bullet">
 													<span class="bullet bullet-dot"></span>
 												</span>
-                                    <span class="menu-title">Campaign</span>
+                                    <span class="menu-title">Create Campaign</span>
                                 </a>
                             </div>
                         </div>
