--- a/views/user/campaign/campaign.twig
+++ b/views/user/campaign/campaign.twig
@@ -32,7 +32,7 @@
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
-                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Campaign</h1>
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Create Campaign</h1>
 
                 </div>
 
@@ -70,7 +70,7 @@
                                     <button type="button" class="btn btn-primary btn-sm" role="button" data-bs-toggle="modal" data-bs-target="#editExampleModal" >
                                         {#                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>#}
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"  viewBox="0 0 24 24" fill="currentColor"><path d="M13.9999 19.0001L5.00003 19.0002L5 17.0002L11.9999 17.0001L12 6.8283L8.05027 10.778L6.63606 9.36381L13 2.99985L19.364 9.36381L17.9498 10.778L14 6.82825L13.9999 19.0001Z"></path></svg>
-                                        <span class="btn-text-inner">Add Campaign</span>
+                                        <span class="btn-text-inner">Add New</span>
                                     </button>
                                 </div>
                             </div>
@@ -127,7 +127,7 @@
     width: 2.5rem !important;" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
             </span>
                                             <span class="d-block fw-bold text-start">
-                <span class="text-dark fw-bolder d-block fs-3">Email</span>
+                <span class="text-dark fw-bolder d-block fs-3">Email Campaign</span>
             </span>
                                         </label>
                                     </div>
@@ -140,7 +140,7 @@
     width: 2.5rem !important;" viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path></svg>
             </span>
                                             <span class="d-block fw-bold text-start">
-                <span class="text-dark fw-bolder d-block fs-3">Telephone No</span>
+                <span class="text-dark fw-bolder d-block fs-3">SMS Campaign</span>
             </span>
                                         </label>
                                     </div>
