--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -146,6 +146,40 @@
                             <span class="menu-title">Email</span>
                         </a>
                     </div>
+                    <div data-kt-menu-trigger="click" class="menu-item {% if route == '/user/email-template/all' or route == '/user/email-template/add'or route == '/user/email-template/edit/$id'  %} here show {% endif %} menu-accordion">
+									<span class="menu-link">
+										<span class="menu-icon">
+											<!--begin::Svg Icon | path: icons/duotune/ecommerce/ecm007.svg-->
+											<span class="svg-icon svg-icon-2">
+										<!--begin::Svg Icon | path: assets/media/icons/duotune/communication/com014.svg-->
+<span class="svg-icon svg-icon-muted svg-icon-1x"><svg viewBox="0 0 24 24" width="24" height="24" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round" class="css-i6dzq1"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg></span>
+                                                <!--end::Svg Icon-->
+                                            </span>
+                                            <!--end::Svg Icon-->
+										</span>
+										<span class="menu-title">Email Templates</span>
+										<span class="menu-arrow"></span>
+									</span>
+                        <div class="menu-sub menu-sub-accordion menu-active-bg">
+                            <div class="menu-item">
+                                <a class="menu-link {% if route == '/user/email-template/all' or route == '/user/email-template/edit/$id' %}active{% endif %}" href="/user/email-template/all">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+                                    <span class="menu-title">All</span>
+                                </a>
+                            </div>
+                            <div class="menu-item">
+                                <a class="menu-link {% if route == '/user/email-template/add' %}active{% endif %}" href="/user/email-template/add">
+												<span class="menu-bullet">
+													<span class="bullet bullet-dot"></span>
+												</span>
+                                    <span class="menu-title">Add</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
                     {% if 'Associate_Accounts' in permissionValues %}
                 {% if loginType == "firm" %}
                 <div data-kt-menu-trigger="click" class="menu-item {% if route == '/user/clients' or route == '/user/members'or route == '/user/manage/clients'  %} here show {% endif %} menu-accordion">
